# update-lockfile

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pkg.nix  pyproject.toml  tests.nix  update-cargo.py  update-flake.py  update-lockfile.py  update_lockfile.py
.github/workflows/: ci.yml
tests/: poetry.lock.a.toml  poetry.lock.b.toml  poetry.lock.toml  test_poetry_lock.py  test_update_lockfile.py
update_lockfile/: __init__.py
